# wasm-rust-test

./: Cargo.toml
lib_wasm/src/: println.rs
lib_wasm_derive/: Cargo.toml
lib_wasm_derive/src/: lib.rs
src/: lib.rs
