[package]
name = "wasm-rust-test"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
lib_wasm.workspace = true
lib_wasm_derive.workspace = true

[workspace]
resolver = "2"
members = ["lib_wasm", "lib_wasm_derive"]

[workspace.dependencies]
lib_wasm = { path = "lib_wasm"  }
lib_wasm_derive = { path = "lib_wasm_derive" }
